--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,24 +2,31 @@ group 'com.MythiCode.ocrkit'
 version '1.0'
 
 buildscript {
+    ext.kotlin_version = '1.6.10'
+
     repositories {
+        mavenLocal()
         google()
         jcenter()
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
-    }
+        classpath 'com.google.gms:google-services:4.3.10'  // Google Services plugin
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
 
 rootProject.allprojects {
     repositories {
+        mavenLocal()
         google()
         jcenter()
     }
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -30,16 +37,29 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
-}
-dependencies {
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.2'
 
-    def camerax_version = "1.0.0-beta07"
-// CameraX core library using camera2 implementation
+    buildFeatures {
+        viewBinding true
+    }
+
+}
+
+dependencies {
+
+    // ML Kit dependencies
+   // implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
+    implementation 'com.google.mlkit:text-recognition:16.0.0-beta3'
+
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    def camerax_version = "1.1.0-beta01"
     implementation "androidx.camera:camera-camera2:$camerax_version"
-// CameraX Lifecycle Library
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-// CameraX View class
-    implementation "androidx.camera:camera-view:1.0.0-alpha14"
+    implementation "androidx.camera:camera-view:1.1.0-beta01"
+
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
 }
