--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,11 +7,13 @@ buildscript {
     repositories {
         mavenLocal()
         google()
+        maven { url 'https://jitpack.io' }
+
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.5.4'
         classpath 'com.google.gms:google-services:4.3.10'  // Google Services plugin
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
@@ -21,6 +23,8 @@ rootProject.allprojects {
         mavenLocal()
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
+
     }
 }
 
@@ -47,19 +51,22 @@ android {
 dependencies {
 
     // ML Kit dependencies
-   // implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
     implementation 'com.google.mlkit:text-recognition:16.0.0-beta3'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.google.android.gms:play-services-cast-framework:21.0.1'
 
-    def camerax_version = "1.1.0-beta01"
+    def camerax_version = "1.1.0-beta02"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:1.1.0-beta01"
+    implementation "androidx.camera:camera-view:$camerax_version"
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
+
+    implementation 'com.github.ronnieotieno:Ronnie-Image-Picker:1.1.0'
+
 }
