--- a/example/android/gradle/wrapper/gradle-wrapper.properties
+++ b/example/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Mar 10 12:06:47 IRST 2022
+#Fri Jun 23 08:50:38 CEST 2017
 distributionBase=GRADLE_USER_HOME
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-bin.zip
 distributionPath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-zipStoreBase=GRADL6.7SER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.7-all.zip
