--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ocrkit
-description: A new flutter plugin project uses camera kit for image proccesing and reading text
-version: 0.0.25
+description: Uses camera kit for image proccesing and reading text
+version: 0.0.26
 homepage: https://github.com/MythiCode/
 
 environment:
