--- a/android/build.gradle
+++ b/android/build.gradle
@@ -59,10 +59,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.google.android.gms:play-services-cast-framework:21.0.1'
 
-    def camerax_version = "1.1.0-beta02"
+    def camerax_version = "1.0.0-beta07"
+    //def camerax_version = "1.1.0-beta02"
     implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:$camerax_version"
+    //implementation "androidx.camera:camera-view:$camerax_version"
+    implementation "androidx.camera:camera-view:1.0.0-alpha14"
 
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
