--- a/.pubignore
+++ b/.pubignore
@@ -21,8 +21,6 @@
 #.vscode/
 
 # Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
@@ -32,6 +30,7 @@
 /build/
 /example/android/
 /example/ios/
+/example/build/
 /example/pubspec.yaml
 /example/test/
 
@@ -50,10 +49,3 @@ app.*.map.json
 /android/app/release
 
 *.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
